# quicks3fs

./: .gitignore  .gitmodules  Caddyfile  Cargo.toml  compose.yml  flake.nix  haproxy.cfg  nginx.conf
infrastructure/: Dockerfile.caddy  compose.yml  generate-cert.sh  nginx.conf
infrastructure/scripts/: setup-bucket.sh
monitoring/: compose.yml  prometheus.yml
monitoring/provisioning/dashboards/: node-exporter-full.json
scripts/: generate-cert.sh
src/: main.rs  s3_benchmarks.rs  s3_client.rs
udp-benchmarks/: Cargo.toml
udp-benchmarks/src/: main.rs  receiver.rs  sender.rs
