[package]
name = "quicks3fs"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-credential-types = "1.2.11"
aws-sigv4 = "1.3.8"
http = "1.4.0"
mio = "1.1.1"
reqwest = { version = "0.13.1", features = ["http3", "rustls"] }
ring = "0.17.14"
rustls = "0.23.36"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"

[workspace]
resolver = "2"

members = [
    "udp-benchmarks",
]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
